--- a/PART1 - Sat orbiting Earth - Data Cleaning.ipynb
+++ b/PART1 - Sat orbiting Earth - Data Cleaning.ipynb
@@ -4,21 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evolution of satellites orbiting the Earth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "# %matplotlib notebook\n",
-    "%matplotlib inline"
+    "# SATELLITES MARKET (orbiting Earth)"
    ]
   },
   {
@@ -33,6 +19,20 @@
     "\n",
     "NOTE: I had issues downoading the dataset directly from the website due to encoding.\n",
     "I finally could overcome this issue by ading a 'latin' encoding to it.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "# %matplotlib notebook\n",
+    "%matplotlib inline"
    ]
   },
   {
