--- a/PART1 - Sat orbiting Earth - Data Cleaning.ipynb
+++ b/PART1 - Sat orbiting Earth - Data Cleaning.ipynb
@@ -2587,7 +2587,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "968"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sat['LaunchMass_kg'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       2019\n",
+       "1       2018\n",
+       "2       2017\n",
+       "3       2016\n",
+       "4       2014\n",
+       "        ... \n",
+       "2782    2011\n",
+       "2783    2019\n",
+       "2784    2012\n",
+       "2785    2016\n",
+       "2786    2020\n",
+       "Name: Year, Length: 2787, dtype: int64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sat['Year']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
